@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>examples</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
@@ -17,6 +18,7 @@
     </properties>
 
     <build>
+        <finalName>examples</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -25,7 +27,9 @@
                 <configuration>
                     <release>19</release>
                     <compilerArgs>
-                        --enable-preview
+                        <compilerArg>--enable-preview</compilerArg>
+                        <compilerArg>--add-modules</compilerArg>
+                        <compilerArg>jdk.incubator.concurrent</compilerArg>
                     </compilerArgs>
                 </configuration>
             </plugin>
